--- a/app/src/main/res/layout/item_exam_result.xml
+++ b/app/src/main/res/layout/item_exam_result.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/rounded_box"
+    android:layout_margin="8dp">
 
     <ImageView
         android:id="@+id/ox_image"
@@ -23,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Exam Result"
-            android:textSize="16sp"/>
+     l       android:textSize="16sp"/>
 
         <com.sungkyul.synergy.utils.GalaxyButton
             android:id="@+id/galaxy_button"
