--- a/app/src/main/res/layout/item_exam_result.xml
+++ b/app/src/main/res/layout/item_exam_result.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Exam Result"
-     l       android:textSize="16sp"/>
+            android:textSize="16sp"/>
 
         <com.sungkyul.synergy.utils.GalaxyButton
             android:id="@+id/galaxy_button"
