--- a/app/src/main/res/layout/activity_default_camera.xml
+++ b/app/src/main/res/layout/activity_default_camera.xml
@@ -92,7 +92,7 @@
         android:id="@+id/camera_screen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/sample_screenshot1"
+        android:src="@drawable/front_picture"
         android:layout_below="@+id/top_menu_layout"
         android:layout_above="@+id/bottom_menu_layout"
         android:contentDescription="@string/camera_screen"/>
