--- a/app/src/main/res/layout/activity_default_camera_first.xml
+++ b/app/src/main/res/layout/activity_default_camera_first.xml
@@ -77,7 +77,7 @@
         android:layout_width="450dp"
         android:layout_height="450dp"
         android:paddingHorizontal="12dp"
-        android:src="@drawable/no_copyright"
+        android:src="@drawable/camera_explanation_1"
         app:layout_constraintTop_toTopOf="@id/guide"
         app:layout_constraintBottom_toBottomOf="@id/guide3"
         app:layout_constraintStart_toStartOf="parent"
