--- a/app/src/main/res/layout/activity_default_camera_gallery_view.xml
+++ b/app/src/main/res/layout/activity_default_camera_gallery_view.xml
@@ -8,6 +8,11 @@
     tools:context=".learning_space.default_app.camera.activity.DefaultCameraGalleryViewActivity"
     android:background="@color/black">
 
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <LinearLayout
         android:id="@+id/top_menu_layout"
         android:layout_width="match_parent"
@@ -61,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="32dp"
-        android:src="@drawable/sample_screenshot1"
+        android:src="@drawable/front_picture"
         android:layout_below="@+id/top_menu_layout"
         android:layout_above="@+id/bottom_menu_layout"
         android:contentDescription="@string/gallery_screen"/>
