--- a/app/src/main/res/layout/activity_default_camera_gallery_view.xml
+++ b/app/src/main/res/layout/activity_default_camera_gallery_view.xml
@@ -26,7 +26,7 @@
             android:id="@+id/back_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/ic_gallery_back"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -41,7 +41,7 @@
                 android:id="@+id/bixby_vision_button"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:src="@drawable/todo_circle"
+                android:src="@drawable/ic_gallery_play"
                 android:background="@drawable/white_circle"
                 android:padding="12dp"
                 android:scaleType="centerInside"
@@ -51,7 +51,7 @@
                 android:id="@+id/more_button"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:src="@drawable/todo_circle"
+                android:src="@drawable/ic_gallery_see"
                 android:background="@drawable/white_circle"
                 android:padding="12dp"
                 android:scaleType="centerInside"
@@ -84,7 +84,7 @@
             android:id="@+id/favorite_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/ic_gallery_heart"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -95,7 +95,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="24dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/ic_gallery_pencil"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -106,7 +106,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="24dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/ic_gallery_share"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
@@ -117,7 +117,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="24dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/ic_gallery_trash"
             android:background="@drawable/white_circle"
             android:padding="12dp"
             android:scaleType="centerInside"
