카톡 교육코스 추가/화면에 일부 기능이 없어서 만들어야 할 듯

--- a/app/src/main/res/layout/activity_kakao_chatting.xml
+++ b/app/src/main/res/layout/activity_kakao_chatting.xml
@@ -149,6 +149,7 @@
                     android:layout_gravity="center"
                     android:src="@drawable/ic_kakao_chat_face_black_24dp"/>
                 <ImageView
+                    android:id="@+id/sharp_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
