--- a/app/src/main/res/layout/fragment_my_exam_result.xml
+++ b/app/src/main/res/layout/fragment_my_exam_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".profile_space.MyExamResultActivity">
+    tools:context=".profile_space.MyExamResultFragment">
 
 
     <ImageView
