--- a/app/src/main/res/layout/activity_kakao_chatting.xml
+++ b/app/src/main/res/layout/activity_kakao_chatting.xml
@@ -148,13 +148,15 @@
                     android:layout_marginEnd="10dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_kakao_chat_face_black_24dp"/>
+
                 <ImageView
                     android:id="@+id/sharp_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_kakao_chat_grid_black_24dp"/>
+                    android:background="#FFD400"
+                    android:src="@drawable/baseline_send_24"/>
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
