--- a/app/src/main/res/layout/activity_default_message_chatting.xml
+++ b/app/src/main/res/layout/activity_default_message_chatting.xml
@@ -130,7 +130,8 @@
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@color/white">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -155,7 +156,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@color/white">
 
                 <TextView
                     android:layout_width="wrap_content"
