--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
-        android:layout_marginTop="8sp" />
+        android:layout_marginTop="8sp"
+        android:textColor="@color/black"
+        android:textSize="12sp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rounded_bg_layout_id"
@@ -59,7 +61,7 @@
             android:id="@+id/editTextId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="아이디를 입력해주세요."
+            android:hint="아이디 입력"
             android:background="@null"
             android:inputType="text"
             android:textColor="#7c7c7c"
@@ -68,7 +70,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginEnd="16dp"
+            android:textColorHint="#aaaaaa"
+            android:textSize="11sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -98,7 +102,7 @@
             android:id="@+id/editTextPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="비밀번호를 입력해주세요."
+            android:hint="비밀번호 입력"
             android:background="@null"
             android:inputType="textPassword"
             android:textColor="#7c7c7c"
@@ -107,7 +111,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginEnd="16dp"
+            android:textColorHint="#aaaaaa"
+            android:textSize="11sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -145,7 +151,8 @@
             android:fontFamily="@font/pretendard_regular"
             app:layout_constraintTop_toBottomOf="@id/btnLogin"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/black"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
