--- a/app/src/main/res/layout/activity_practice_call3_add.xml
+++ b/app/src/main/res/layout/activity_practice_call3_add.xml
@@ -27,7 +27,7 @@
             android:layout_weight="0.5"
             android:padding="16dp"
             android:text="00:00"
-            android:textSize="20dp"
+            android:textSize="16dp"
             android:textStyle="bold" />
 
         <!-- 타이머와 텍스트 사이의 공간 -->
@@ -45,7 +45,7 @@
             android:padding="16dp"
             android:text="문제보기"
             android:textColor="@color/phoneRed"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -237,7 +237,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:background="@color/white">
 
                 <Button
                     android:id="@+id/cancel_button"
