--- a/app/src/main/res/layout/activity_setting2_font.xml
+++ b/app/src/main/res/layout/activity_setting2_font.xml
@@ -45,7 +45,7 @@
     <LinearLayout
         android:id="@+id/rounded_layout"
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_button"
         android:orientation="vertical"
@@ -72,7 +72,7 @@
     <LinearLayout
         android:id="@+id/font_layout"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="160dp"
         android:orientation="vertical"
         android:background="@drawable/rounded_button"
         app:layout_constraintTop_toBottomOf="@id/rounded_layout"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:text="글꼴"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:gravity="start"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
@@ -101,7 +101,7 @@
             android:text="기본"
             android:textStyle="bold"
             android:textColor="#0672D5"
-            android:textSize="12sp"
+            android:textSize="10sp"
             android:gravity="start"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="15dp"/>
@@ -130,9 +130,10 @@
                 android:layout_height="wrap_content"
                 android:text="글자 굵게"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:gravity="start"
                 android:layout_marginEnd="8dp"
+                android:visibility="invisible"
                 />
 
             <Switch
