--- a/app/src/main/res/layout/fragment_exam_space.xml
+++ b/app/src/main/res/layout/fragment_exam_space.xml
@@ -101,6 +101,7 @@
                 android:gravity="center"
                 android:text="실습"
                 android:fontFamily="@font/pretendard_semibold"
+                android:textColor="#7c7c7c"
                 />
         </LinearLayout>
 
@@ -173,6 +174,7 @@
                 android:gravity="center"
                 android:text="실습"
                 android:fontFamily="@font/pretendard_semibold"
+                android:textColor="#7c7c7c"
                 />
         </LinearLayout>
 
