--- a/app/src/main/res/layout/activity_default_message.xml
+++ b/app/src/main/res/layout/activity_default_message.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/synergy"
+                android:text="대장님"
                 android:textSize="16sp"
                 android:textColor="@color/message_profile_name"/>
 
