--- a/app/src/main/res/layout/activity_kakao_chatting.xml
+++ b/app/src/main/res/layout/activity_kakao_chatting.xml
@@ -46,7 +46,7 @@
                         android:id="@+id/chatting_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="이경희"
+                        android:text="서인국"
                         android:textColor="@color/black"
                         android:textSize="20dp"
                         android:textStyle="bold" />
